# playwright_test_agent

./: .gitignore  CLAUDE.md  README.md  TDD.md  pyproject.toml  recorded-test.spec.ts
docs/plans/: 2025-01-06-accessibility-enumeration-design.md  2025-12-04-js-interaction-detector.md  2025-12-04-recording-mode-design.md  2025-12-04-recording-mode-implementation.md  2025-12-07-functional-api-tester-design.md  2025-12-07-functional-api-tester-implementation.md
js_interaction_detector/: __init__.py  __main__.py  analyzer.py  cli.py  listener_extractor.py  models.py  page_loader.py  rule_inferrer.py
js_interaction_detector/enumerator/: __init__.py  extractor.py  test_generator.py
js_interaction_detector/functional_tester/: __init__.py  instrumentation.py  models.py  test_generator.py  type_parser.py  usage_detector.py
js_interaction_detector/recorder/: __init__.py  action_tracker.py  change_observer.py  selector_generator.py  session.py  test_generator.py
specs/: 2025-12-04-initial-design.md
tests/: __init__.py  test_analyzer.py  test_cli.py  test_integration.py  test_listener_extractor.py  test_models.py  test_page_loader.py  test_rule_inferrer.py
tests/fixtures/sample_js/: lodash_usage.js
tests/test_enumerator/: __init__.py  test_extractor.py  test_test_generator.py
tests/test_functional_tester/: __init__.py  test_instrumentation.py  test_test_generator.py  test_type_parser.py  test_usage_detector.py
tests/test_recorder/: __init__.py  test_action_tracker.py  test_change_observer.py  test_selector_generator.py  test_session.py  test_test_generator.py
(+7 files in other folders)
