[project]
name = "js-interaction-detector"
version = "0.1.0"
description = "Detect JavaScript-driven input validations on web pages"
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
]

[project.scripts]
js-interaction-detector = "js_interaction_detector.cli:main"

[tool.setuptools]
packages = ["js_interaction_detector"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["js_interaction_detector"]
